20210421 -- 57 ready, 15 left -- RAW translation

--- a/Obsidian/Указатель.md
+++ b/Obsidian/Указатель.md
@@ -1,10 +1,10 @@
 ## Об этом сайте
 
-Добро пожаловать в официальную Справку-хранилище Obsidian! Эта страница содержит краткий указатель вещей, которые могут вас заинтересовать.
+Добро пожаловать в хранилище официальной документации Obsidian! Эта страница содержит краткий указатель вещей, которые могут вас заинтересовать.
 
 Ознакомиться с веб версией: https://publish.obsidian.md/help-ru %%#2do%%
 
-Если вы обнаружили ошибки или отсутствующую информацию, вы можете внести свой вклад в этот сайт здесь: https://github.com/obsidianmd/obsidian-docs/
+Если вы обнаружили ошибки или недостающую информацию, вы можете внести свой вклад в работу этого сайта здесь: https://github.com/obsidianmd/obsidian-docs/
 
 ## Сведения об авторах
 
@@ -16,7 +16,7 @@
 
 ### О программе
 
-- Прочитать [[Obsidian|о нашей фислософии]]. %%#2do%%
+- Почитать [[Obsidian|о нашей фислософии]]. %%#2do%%
 
 ### Начало работы
 
@@ -29,7 +29,7 @@
 
 ### Официальные плагины
 
-![[Список плагинов#Текущий список официальных плагинов]]
+![[Список плагинов#Список официальных плагинов]]
 
 ### Продвинутое использование
 
@@ -44,6 +44,7 @@
 ### Другие языки
 
 Эта публичная Справка также доступна на следующих языках:
+
 - [English](https://publish.obsidian.md/help)
 - [Dansk](https://publish.obsidian.md/help-da)
 - [Italiano](https://publish.obsidian.md/help-it)
