--- a/Области/Связанная область.md
+++ b/Области/Связанная область.md
@@ -1,7 +1,7 @@
-Panes can be linked together. This has two main effects:
+Области можно связывать друг с другом. Это дает 2 основных эффекта:
 
-- By default, when opening a new [[Режимы просмотра и редактирования|preview pane]] from an editing pane, the new pane is linked to the old one. This means that any changes you make in the editor will show up in the preview in real time. It also means that scrolling one will scroll the other.
+- По умолчанию, при открытии новой [[Режимы просмотра и редактирования|области предварительного просмотра]] из области редактирования, новая область связывается со исходной. Это означает, что любые изменения, которые вы делаете в редакторе будут отображаться в области просмотра в реальном времени. Это также означает, что прокрутка одной области будет прокручивать и другую.
 
-- When a new [[Работа с обратными ссылками|Backlink Pane]] is created from a note, it will be linked to that note. This means that backlinks will always be shown for the note that is in that pane. This is useful if you want to reference a set of backlinks but let the regular backlink panel change with whatever other note you are working on.
+- Когда создается новая [[Работа с обратными ссылками|область обратных ссылок]] для конкретной заметки, она будет связана с текущей заметкой. Это значит, что обратные ссылки будут показаны только для заметки в этой области. Это полезно, когда вы хотите иметь под рукой перечень обратных ссылок заметки, но основная панель обратных ссылок в то же время изменяется в соответствии с тем, с какими заметками вы работаете в это время.
 
-Linked panes will be marked with a link icon. You can hover the link to see which pane it's linked to, or click the icon to release it, so that they are no longer linked. This will not close the previously-linked pane.
+Связанные области отмечаются иконкой звена цепочки. Если подвести курсор мыши к этой иконке, то подсветятся связанные области. Нажатие на иконку отвяжет области друг от друга. Но это не закроет ранее связанную область.
