--- a/Плагины/Публикация.md
+++ b/Плагины/Публикация.md
@@ -1,83 +1,84 @@
-The Publish plugin lets you publish notes from your vault onto your site, all from within the Obsidian app.
+Плагин Публикация позволяет публиковать заметки из вашего хранилища на вашем сайте через приложение Obsidian.
 
-For more information about the Obsidian Publish™ service, what's included, how it works, and privacy, see the [[Obsidian Publish]] add-on service.
+Для получения дополнительной информации о сервисе Obsidian Publish™, о том, что входит в его состав, как он работает, и о конфиденциальности, см. дополнительный сервис [[Obsidian Publish]].
 
-### Enable the plugin
+### Включение плагина
 
-From within Obsidian > Settings > Plugin, enable the Publish plugin. After that, a Publish icon (which looks like a paper plane) will appear in the ribbon pane.
+В Obsidian > Настройки > Основные плагины, включите плагин Публикация. После этого в левой панели появится иконка Публикации (которая выглядит как бумажный самолетик).
 
-Once enabled, you can also set a hotkey for this option, or use the command palette to access it.
+После включения плагина вы также можете задать сочетание клавишь для этого параметра или использовать палитру команд для доступа к нему.
 
-### Set up and Configure your site
+### Настройка вашего сайта
 
-Within the Publish plugin, you'll see an option to create a site by entering a unique site ID. Once published, your site will be available at `https://publish.obisidian.md/{site-id}`.
+В плагине Публикация вы увидите возможность создать сайт, введя уникальный идентификатор сайта. После публикации ваш сайт будет доступен по адресу `https://publish.obisidian.md/{site-id}`.
 
-After creating a unique site ID, you'll have the option to give your site a name, select a home page, set a theme, and toggle various components such as graph view, table of contents, etc. You can toggle these options by clicking on the gear icon near your site name at the top of the Publish plugin.
+После создания уникального идентификатора сайта, у вас будет возможность задать имя вашему сайту, выбрать домашнюю страницу, установить тему и переключить различные компоненты, такие как графический вид, оглавление и т.д. Вы можете переключить эти параметры, нажав на значок шестеренки рядом с названием вашего сайта в верхней части плагина Публикация.
 
-### Select files for publishing
+### Выбор файлов для публикации
 
-After setting up your site, you can now publish your notes!
+После настройки вашего сайта вы сможете публиковать свои заметки!
 
-With a fresh, empty site, all your notes will appear under the "New" section, meaning they are new to your site. At this point, you may choose which files you want to publish, and then click the "Publish" button.
+На свежем, пустом сайте все Ваши заметки появятся в разделе "Новое", что означает, что они являются новыми для Вашего сайта. На этом этапе Вы можете выбрать, какие файлы Вы хотите опубликовать, а затем нажать кнопку Опубликовать.
 
-==Privacy note: Obsidian Publish has no awareness (nor retention) of any notes you choose not to publish (nor any notes you subsequently remove from your published site).==
+==Заметка о конфиденциальности: Obsidian Publish не знает (и не сохраняет) ни о каких заметках, которые вы решили не публиковать (и ни о каких заметках, которые вы впоследствии удалите со своего опубликованного сайта)==.
 
-### Make changes
+### Внесение изменений
 
-As you make changes to notes that have already been published, those changes will be automatically selected when you open the Publish plugin dialog. You may uncheck any files you wish not to publish to your site.
+При внесении изменений в уже опубликованные заметки эти изменения будут автоматически выбраны при открытии диалога плагина Публикация. Вы можете снять флажок с любых файлов, которые вы не хотите публиковать на своем сайте.
 
-### Change site options
+### Изменение параметров сайта
 
-You can change various site options by clicking on the gear icon near your site name when in the "Publish changes" dialogue.
+Вы можете изменить различные параметры сайта, нажав на иконку шестеренки рядом с названием сайта в диалоге Публикация изменений.
 
-#### Metadata
+#### Метаданные
 
-In this section, you can set site name, home page file (the file visitors see when they land on your site), and manage custom domain (please see [[Obsidian Publish#Custom domain|this guide]] to set up your custom domain).
+В этом разделе вы можете установить имя сайта, файл домашней страницы (файл, который увидят пользователи, зашедшие на ваш сайт), и управлять пользовательским доменом (см. [[Obsidian Publish#Пользовательский домен|этот гайд]] для настройки пользовательского домена).
 
-#### Appearance
+#### Внешний вид
 
-Here you can change the theme between light and dark.
+Здесь вы можете выбрать между светлой и темной темой оформления.
 
-If you want more customization, you can look into setting up [[Obsidian Publish#Custom CSS|custom CSS]] and [[Obsidian Publish#Favicon|favicon]].
+Если вы хотите больше настроек, вы можете настроить [[Obsidian Publish#Пользовательский CSS|пользовательский CSS]] и [[Obsidian Publish#Favicon|favicon]].
 
-#### Reading experience
 
-In this section, you can:
+#### Режим чтения
 
-- Enable a special mode called "sliding windows" that looks like [Andy Matuschak's notes](https://notes.andymatuschak.org/);
-- Enable page preview on hover like when using [[Предпросмотр страницы]] plugin in the app;
-- Configure whether you want readable line length and strict line breaks.
+В этом разделе вы можете:
 
-#### Components
+- Включить специальный режим, называемый «раздвижные окна», который выглядит как [записки Andy Matuschak](https://notes.andymatuschak.org/);
+- Включить просмотр страницы при наведении курсора, как при использовании плагина [[Предпросмотр страницы]] в приложении;
+- Настроить длину строки и строгий разрыв строк.
 
-Your site comes with a few components that you can toggle on or off. These include:
+#### Компоненты
 
-- File explorer (default on)
-- Local graph (default on)
-- Outline (default off)
-- Backlink at the bottom (default off)
-- Search bar (default off, requires file explorer)
+Ваш сайт поставляется с несколькими компонентами, которые можно включить и выключить. Они включают в себя:
 
-#### Security
+- Файловый менеджер (по умолчанию включен)
+- Локальный граф (по умолчанию включен)
+- Структура или Outline (по умолчанию выключен)
+- Обратная ссылка внизу (по умолчанию выключена)
+- Панель поиска (по умолчанию выключена, требуется файловый менеджер)
 
-Here you can set passwords to protect your site. Once set, all visitors need to enter one of the passwords to enter your site.
+#### Безопасность
 
-Multiple passwords facilitate sharing with multiple groups. When you no longer wish to share with one group of visitors, you can simply delete that password. Each password can be named for your convenience as well.
+Здесь вы можете установить пароли для защиты вашего сайта. После установки, все посетители должны ввести один из паролей для входа на ваш сайт.
 
-As of 2021/01/20, all notes on your site are protected by the same set of passwords.
+Несколько паролей облегчают обмен с несколькими группами. Когда вы больше не хотите делиться с одной группой посетителей, вы можете просто удалить этот пароль. Каждый пароль также может быть назван для вашего удобства.
 
-### Add linked notes
+С 2021/01/20 все заметки на вашем сайте защищены одним и тем же набором паролей.
 
-The "Add linked" button allows you to include for publishing any notes in your vault that are referenced (linked to) by any currently selected notes. This is a good way to ensure there are no dead links on your published site.
+### Добавление связанных заметок
 
-By way of example, let's assume you select Note A for publishing. Supposing Note A has links to Note P, Note Q, and Note R, then if you click the "Add linked" button, Notes P, Q, and R will all be selected for publishing along with the currently selected Note A.
+Кнопка Add linked позволяет включить для публикации в хранилище любые заметки, на которые есть ссылки, связанные с любыми выбранными в данный момент заметками. Это хороший способ гарантировать отсутствие мертвых ссылок на вашем опубликованном сайте.
 
-Each time you click the "Add linked" button, the Publish plugin will look for links within every currently selected file to include for publication. Please be sure you review the list of selected files before clicking the "Publish" button.
+В качестве примера предположим, что вы выбрали для публикации заметку А. Предположим, что в заметке A есть ссылки на заметку P, заметку Q и заметку R, то если вы нажмёте кнопку «Добавить ссылку», то все заметки P, Q и R будут выбраны для публикации вместе с текущей выбранной заметкой A.
 
-### Delete published notes
+Каждый раз, когда вы нажимаете кнопку Add linked, плагин Публикация будет искать ссылки в каждом текущем выбранном файле для публикации. Пожалуйста, убедитесь, что вы просмотрели список выбранных файлов перед тем, как нажимать кнопку «Опубликовать».
 
-You always have the option of removing any notes that have been published to your site. Within the Publish plugin, all published notes will be listed, of which any/all can be selected for removal. Deleting a note from your site **does not** remove the note from your vault, thus giving you the option to re-publish the note again in the future.
+### Удаление опубликованных заметок
 
-### Delete entire site
+У вас всегда есть возможность удалить любые заметки, которые были опубликованы на вашем сайте. В плагине Publish будут перечислены все опубликованные заметки, из которых любые/все могут быть выбраны для удаления. Удаление заметки с вашего сайта **не** удаляет заметку из хранилища, что дает вам возможность повторно опубликовать заметку в будущем.
 
-If you'd like to delete an entire site, click the switch-site (arrows) icon near the top of the Publish plugin. Then click the X button to delete your site. Note: this only removes your public site but does not affect any files in your vault. You can always choose to re-publish your notes. 
+### Удаление всего сайта
+
+Если вы хотите удалить весь сайт, нажмите на иконку стрелок в верхней части плагина Публикация. Затем нажмите на кнопку X, чтобы удалить ваш сайт. Обратите внимание: это удалит только ваш общедоступный сайт, но не повлияет ни на какие файлы в вашем хранилище. Вы всегда можете выбрать повторную публикацию своих заметок.
