--- a/Продвинутое использование/Удаление файлов.md
+++ b/Продвинутое использование/Удаление файлов.md
@@ -6,4 +6,4 @@
 
 - Так же вы можете настроить Obsidian так, что файлы будут удаляться без возможности восстановления. 
 
-Вариант удаления выбирается в Настройках во вкладке Файл.
+Эти опции могут быть найдены в разделе Настройки => Файл.
