--- a/Руководства/Базовое ведение заметок.md
+++ b/Руководства/Базовое ведение заметок.md
@@ -1,23 +1,23 @@
-If you've just opened Obsidian, you'll see two documents here. The one in the left pane is a text file, which you can edit using Markdown syntax. The one in the right pane is a _Preview_ of the same text file if you were to export it as HTML, or as a PDF document. Note that some things look different in Preview, and, most obviously, links are not in brackets. To follow a link, click on it in the Preview pane. You can follow links in the Editor pane as well, by holding down `Ctrl/Cmd` and clicking on the link. If you want to go back to the page you were on before, use the shortcut `Ctrl/Cmd-alt-LeftArrow`
+Если вы только что открыли Obsidian, вы увидите две области с документом. В левой области находится текстовый файл, который можно редактировать, используя синтаксис Markdown. В правой области находится _Предварительный просмотр_ того же самого текстового файла, как если бы вы его экспортировали как HTML, или как PDF документ. Обратите внимание, что некоторые вещи выглядят по-другому в Просмотре, и, что наиболее очевидно, ссылки не заключены в скобки. Чтобы перейти по ссылке, нажмите на нее в области Предварительного просмотра. Вы можете переходить по ссылкам и в области редактора, удерживая нажатой клавишу `Ctrl/Cmd` при нажатии на ссылку. Если вы хотите вернуться на страницу, на которой были раньше, используйте сочетание `Ctrl/Cmd-alt-СтрелкаВлево`.
 
-Alternatively, the notes that link to the one you're currently on will be shown in the **Backlinks Panel** on the right (find more about Backlinks [[Обратные ссылки|here.]])
+В обратную сторону, заметки, которые ссылаются на ту, в которой вы работаете, будут отображены в панели **Обратных ссылок** справа (более подробно об обратных ссылках можно почитать [[Обратные ссылки|здесь]])
 
-If you get lost at any time, or just want to explore what else Obsidian can do, `Ctrl/Cmd-P` brings up the Command Palette. You can type commands there, like "Navigate back", and you'll see options filter to a short list, along with hotkey shortcuts if they have them. 
+В любой момент, когда вы потерялись или просто хотите посмотреть что еще умеет Obsidian, `Ctrl/Cmd-P` вызовет палитру команд. В ней можно писать команды текстом, например «Вернуться назад» и вы увидите как варианты команд фильтруются до короткого списка, который также отображает и назначенные на команды горячие клавиши. 
 
-At base, Obsidian is a tool for working with a bunch of markdown files that are stored on your computer. If you're not familiar with markdown, it's just plain text with some formatting that makes it powerful (for more on that, see [[Форматирование заметок|Markdown]]) . As a result, if you want to use obsidian for keeping regular notes on just about anything, it will work great. 
+Фундаментально Obsidian это инструмент для работы с набором markdown файлов, хранящихся на компьютере. Если вы не знакомы с форматом Markdown, то это простой текстовый формат с условным форматированием, что делает его очень мощным (для доплнительной информации см. [[Форматирование заметок|Markdown]]). Таки образом, если вы захотите использовать Obsidian для хранения обычных заметок обо всем на свете, то он прекрасно с этим справится. 
 
-Let's say you want to write a note about your favorite band. Just type the name of the note surrounded by two square brackets, like `[[My Favorite Band]]`
+Представим для примера, что вы хотите написать заметку о своей любимой группе. Просто напишите название заметки, окруженное двойной квадратной скобкой вот так: `[[Моя любимая группа]]`
 
-Try it here (make sure you're typing in the Editor pane): 
+Попробуйте прямо здесь (убедитесь, что вы в области для редактирования):
 
-You'll notice that the text and the brackets turn blue. That means it's a link now. Click on that link in the Preview (or `Cmd-click` in the Editor), and you'll see a blank note. Write whatever you want there, and when you're done, come back here with `Cmd-alt-left`, or by clicking the name of this note ([[Базовое ведение заметок]]) in the **Backlinks** to the right. To learn more about navigating links, see [[Внутренняя ссылка]].
+Вы заметите, что текст и скобки выделятся голубым цветом. Это означает, что теперь это ссылка. Можно щелкнуть по ссылке в области просмотра (или `Cmd-click` в редакторе) и вы увидите пустую заметку. Напишите в ней все что вы хотите написать и вернитесь обратно комбинацией `Cmd-alt-влево` как закончите, либо нажмите на название этой заметки ([[Базовое ведение заметок]]) в **панели обратных ссылок** справа. Дополнительная информация о переходах по ссылкам, см. [[Внутренняя ссылка]].
 
 ---
 
-Notice that your new note showed up automatically in the File Explorer to the left. Obsidian automatically creates files when you click a link to a file that does not exist. This means you can `[[write naturally]]` about `[[whatever comes to mind]]` and then go back and create the new notes at your leisure. This makes Obsidian a fantastic tool for thinking freely in notes without having to worry about where to file them. And if you decide that a title is not what you actually meant, you can change the file name at the top of this window, and Obsidian will automatically update all links to it.
+Обратите внимание, ваша новая заметка автоматически отобразилась в Файловом Менеджере в левой панели. Obsidian автоматически создает файлы когда вы нажимаете на ссылки на не существующие файлы. Таким образом вы можете `[[писать естественно]]` про `[[все что приходит на ум]]`, а потом возвращаться к заметкам и создавать новые заметки в свободное время. Это позволяет использовать Obsidian для мыслительного процесса в заметках без заботы о том, где эти заметки будут храниться. Если же вы, например, решите, что это название не совсем подходит заметке, вы можете переименовать ее в заголовке и Obsidian автоматически исправит все ссылки на нее в хранилище. 
 
-From there, you can make any kind of structure you want. Many people will want to make a `Table of Contents` note for listing major groups of notes. You can also use #tags to create categories (if you click that it will show you every note that contains #tags ). Really, the structure you build should be whatever works for you. We suggest you just start with what feels natural. Obsidian is flexible enough that it should be relatively simple to rearrange things later.
+С этого момент можно создавать структуру любого удобного вам вида. Многие создают  заметки с `Оглавлением` для перечисления всех основных групп заметок. Также можно использовать #теги для создания категорий (если на них кликнуть мышью, отобразится список всех заметок, содержащих #теги). На самом деле структура должна получиться такой, какой она будет полезна именно вам. Мы рекомендуем попробовать начать с того, что вам кажется естественным. Obsidian достаточно гибок чтобы переделать всё позже было не очень сложно. 
 
-Be aware! The note you just created is in these Help documents, which will be overwritten on new releases. ==If you created anything you care to keep, it should be put into a different vault==. For details on how to do that, see [[Работа с несколькими хранилищами]].
+Внимание! Заметка, которую вы только что создали в этих файлах помощи, будет удалена, а фалы помощи перезаписаны с выходом нового релиза приложения. ==Если вы создали что-то, что важно сохранить, это надо перенести в другое хранилище==. Детально о том как это сделать читайте в [[Работа с несколькими хранилищами]].
 
-If you want an example of a more advanced technique, you might look into the [sample workflows on our forum](https://forum.obsidian.md/t/example-workflows-in-obsidian/1093).
+Примеры более продвинутых техник вы можете найти в [примерах рабочих процессов на нашем форуме (английский)](https://forum.obsidian.md/t/example-workflows-in-obsidian/1093).
