--- a/Руководства/Вложенные файлы.md
+++ b/Руководства/Вложенные файлы.md
@@ -75,4 +75,4 @@
 
 В формате обычной вставки `![[image.png|100x100]]`
 
-Чтобы сохранить соотноление сторон изображения при масштабировании опустите параметр высоты `![[image.png|100]]`.
+Чтобы сохранить соотношение сторон изображения при масштабировании опустите параметр высоты `![[image.png|100]]`.
