--- a/Руководства/Добавление псевдонима к заметке.md
+++ b/Руководства/Добавление псевдонима к заметке.md
@@ -8,7 +8,7 @@ For example, you might want to refer to your partner by their full name, first n
 
 ### Set aliases
 
-Starting in 0.9.16, you're able to specify the "aliases" property in a note's [[YAML front matter]] like so:
+Starting in 0.9.16, you're able to specify the "aliases" property in a note's [[YAML заголовок]] like so:
 
 ```
 ---
