--- a/Руководства/Ссылка на блоки.md
+++ b/Руководства/Ссылка на блоки.md
@@ -1,10 +1,12 @@
-In Obsidian 0.9.5 or higher, in addition to [[Внутренняя ссылка#Link to headings|linking to headings]], you can also link to blocks.
+В Obsidian версии 0.9.5 и новее, в дополнение к [[Внутренняя ссылка#Ссылка на заголовок|ссылкам на заголовки]], вы также можете использовать ссылки на блоки.
 
-### What is a block
+### Что такое блок?
 
-A "block" can be a paragraph, a blockquote, a list item, etc. In general, anything that has empty lines before and after is a block. ^dcf64c
+«Блоком» может быть параграф, цитата, пункт списка и так далее. В общем, все, что имеет пустые строки до и после, является блоком. ^dcf64c
 
-### Link to blocks
+### Ссылка на блок
+
+Для ссылки на блок в определенном файле, начините набор с `[[именифайла` для вызова списка подходящих файлов. После выбора файла наберите `^` и продолжите набирать для поиска блока в нем.
 
 To link to a block in a specific file, first type `[[filename` to bring up a list of matched files. After selecting a file, type `^` and continue typing to search for blocks to link to.
 
