--- a/Руководства/Управление вложениями.md
+++ b/Руководства/Управление вложениями.md
@@ -1,49 +1,49 @@
-## Add an attachment
+## Вставка вложенных файлов
 
-There are several ways to include attachments in your notes:
+Существует несколько способов вставки вложенных файлов в ваши заметки:
 
-1. Copy and paste;
-2. Drag and drop;
-3. Download or copy file to vault folder.
+1. Копирование и вставка;
+2. Перетаскивание;
+3. Скачивание файла в папку хранилища.
 
-After being added, these attachment files are just normal files and can still be accessed through your file system. 
+После вставки, эти вложенные файлы остаются обычными файлами и все еще могут быть доступны через вашу файловую систему.
 
-Please note that only [[Поддерживаемые форматы файлов]] are handled.
+Пожалуйста обратите внимание, что обрабатываются только [[Поддерживаемые форматы файлов|поддерживаемые форматы файлов]].
 
-### Copy and paste
+### Копирование и вставка
 
-Pasting a local file from your system explorer or your clipboard will put the file into your vault.
+Вставка локального файла из системного проводника или из буфера обмена поместит файл в ваше хранилище.
 
-This is very handy when combined with screenshot tools.
+Это очень удобно в сочетании с инструментами для создания снимков экрана. 
 
-### Drag and drop
+### Перетаскивание
 
-If you drag and drop a file from your file explorer, it will be copied to your vault as well.
+При перетаские вание файла из системного проводника, он таже будет скопирован в ваше хранилище.
 
-### Download or copy to vault folder
+### Скачивание файла в папку хранилища
 
-This can work well when paired with [[Захват информации#Use a clipper extension|clipper extensions]].
+Это может хорошо работать в сочетании с [[Сбор данных#Использование расширения для браузера|использованием расширения для браузера]].
 
-You can also download images from your browser into your vault folder directly for later reference.
+Вы также можете сохранять изображения из вашего браузера напрямую в директорию хранилища для дальнейшего использования.
 
-## Change default attachment location
+## Изменения места хранения вложенных файлов
 
-By default, new attachments will be dropped in the root of your vault. You can fine tune this setting in Settings -> Files & Links -> "Default location for new attachments".
+По умолчанию новые вложенные файлы сохраняются в корневую директорию вашего хранилища. Вы можете изменить этот параметр в Настройки -> Файлы и ссылки -> Место для вложенных файлов по умолчанию.
 
-### Choose a folder
+### Выбор папки
 
-You can choose a fixed folder to always place your attachments in. To do this, choose "In the folder specified below", and choose a folder in your vault in the new field that appears.
+Вы можете выбрать постоянную папку для размещения вложенных файлов в ней. Для этого необходимо выбрать вариант «В папке, указанной ниже» и выбрать имя папки в вашем хранилище, в появившемся ниже поле.
 
-Alternatively, you can right click on a folder in [[Файловый менеджер]] and choose "Set as attachment folder".
+Кроме того, вы можете щелкнуть правой кнопкой мыши по папке в [[Файловый менеджер|файловом менеджере]] и выбрать пункт «Установить как папку для вложенных файлов».
 
-### Same folder as current file
+### Папка где расположен файл
 
-Sometimes, you may want the attachment files to always be in the same folder as the note you're working on. In this case, choose "Same folder as current file".
+Иногда вы можете захотеть, чтобы файлы вложений всегда находились в той же папке, что и заметка, над которой вы работаете. В этом случае выберите «В той же папке, где расположен файл».
 
-### Under the current folder
+### Подпапка
 
-You can also choose to save attachments to a folder underneath the folder that the current file is in.
+Вы также можете сохранять вложенные файлы в папку под папкой, в которой находится текущий файл.
 
-To do this, choose the "Subfolder under current folder" option, and write the name of the subfolder in the field that appears. For example, if you write `assets`, and your note is in `VAULT/folder/path/`, the attachments will be added to `VAULT/folder/path/assets` when you're working on this note.
+Для это необходимо выбрать параметр «Subfolder under current folder» и указать имя подпапки в появившемся ниже поле. Например если в качестве имени подпапки вы укажите `файлы` и ваша заметка находится в директории `ХРАНИЛИЩЕ/папка/путь/`, то вложенные файлы будут помещаться в директорию `ХРАНИЛИЩЕ/папка/путь/файлы`, при работе с этой заметкой.
 
-You don't need to create the subfolder beforehand; if it doesn't exist, Obsidian will create it for you.
+Вам не нужно создавать подпапку заранее, если она не существует, Obsidian создаст ее для вас.
