--- a/Руководства/Форматирование заметок.md
+++ b/Руководства/Форматирование заметок.md
@@ -233,6 +233,7 @@ function fancyAlert(arg) {
 - [x] поддерживаются #теги, [ссылки](), **форматирование**
 - [x] требуется синтаксис списка (поддерживаются упорядоченный или не упорядоченный списки)
 - [x] это выполненная задача
+- [?] это тоже выполненная задача (работает с любым символом)
 - [ ] это не выполненная задача
 - [ ] задачи в области просмотра помечаются выполненными при клике на чекбокс
 ```
@@ -240,6 +241,7 @@ function fancyAlert(arg) {
 - [x] поддерживаются #теги, [ссылки](), **форматирование**
 - [x] используется синтаксис списка (поддерживаются упорядоченный или не упорядоченный списки)
 - [x] это выполненная задача
+- [?] это тоже выполненная задача (работает с любым символом)
 - [ ] это не выполненная задача
 - [ ] задачи в области просмотра помечаются выполненными при клике на чекбокс
 
