--- a/Плагины/Шаблоны.md
+++ b/Плагины/Шаблоны.md
@@ -1,37 +1,37 @@
-The Templates plugin lets you quickly insert snippets of text into your current note.
+Плагин Шаблоны позволяет быстро вставлять фрагменты текста в текущую заметку.
 
-### Set up template folder
+### Настроить папку шаблонов
 
-Each template snippet is just a normal Markdown note, like everything else in Obsidian.
+Каждый фрагмент шаблона – это обычная Markdown заметка, как и все остальное в Obsidian.
 
-To designate template files, put them into a folder, and choose that folder in Settings -> Templates -> "Template folder location" after enabling the plugin
+Чтобы обозначить файлы шаблонов, поместите их в папку и выберите эту папку в Настройки -> Шаблоны -> Пусть к папке шаблонов, после включения плагина.
 
-### Insert a template
+### Вставить шаблон
 
-After setting up the folder location, using the ribbon icon to insert the template. As always, you can also set a hotkey for this option, or use the command palette to access it.
+После настройки местоположения папки с помощью значка ленты вставьте шаблон. Как всегда, вы также можете установить горячую клавишу для этой опции или использовать палитру команд для доступа к ней.
 
-The template snippet will be inserted in the current caret position, with special text replaced by their actual value at the time of the insertion (see below).
+Фрагмент шаблона будет вставлен в текущее положение каретки, при этом специальный текст будет заменен его фактическим значением в момент вставки (см. ниже).
 
-### Insert title
+### Вставить наименование
 
-If you want to insert the title of a note, you can set it in a template with `{{title}}`.
+Если вы хотите вставить наименование заметки, вы можете установить его в шаблоне с помощью `{{title}}`.
 
-### Insert date and time
+### Вставить дату и время
 
-In the plugin settings of Template, you can also set a date format and a time format.
+В настройках плагина Шаблон можно также задать формат даты и времени.
 
-After setting these formats, `{{date}}` and `{{time}}` in the template files will be replaced by the formatting current time.
+После вставки `{{date}}` и `{{time}}` в файл шаблона, они будут заменены на текущие дату и время в заметке.
 
-For formatting syntax documentation, [please see here](https://momentjs.com/docs/#/displaying/format/).
+Документация по форматированию синтаксиса [смотрите здесь](https://momentjs.com/docs/#/displaying/format/).
 
-_Tip: if you want to have two date formats or two time formats, you can use the other `{{time}}` as the second `{{date}}`, or `{{date}}` as the second `{{time}}`._
+_Подсказка: если вы хотите иметь два формата даты или два формата времени, вы можете использовать другой `{{time}}` в качестве второго `{{date}}`, или `{{date}}`в качестве второго `{{time}}.`_
 
-### One-off date formats
+### Форматы дат
 
-In addition to `{{date}}` and `{{time}}`, which will work in all template files, you can also write `{{date:YYYY-MM-DD}}` to insert a date with a certain format just once. This will override the `{{date}}` format. Anything after `:` will be considered part of the date format.
+Кроме `{{date}}` и `{{time}}`, которые будут работать во всех шаблонных файлах, вы также можете написать `{{date:YYYY-MM-DD}}`для вставки даты с определённым форматом всего один раз. Это переопределит формат `{{date}}`. Все, что после `:`, будет считаться частью формата даты.
 
-`{{time:HH:mm}}` works similarly.
+`{{time:HH:mm}}` работает аналогично.
 
-### Using custom date formats elsewhere
+### Использование пользовательских форматов дат в других местах
 
-Currently, dates like `{{date:YYYY-MM-DD}}` and `{{time:HH:mm}}` also work in the template file of the [[Ежедневные заметки]] and [[Zettelkasten префикс]] plugins. However, `{{date}}` and `{{time}}` do not work yet.
+В настоящее время такие даты как `{{date:YYYY-MM-DD}}` и `{{time:HH:mm}}` также работают в файле шаблонов плагинов [[Ежедневные заметки]] и [[Zettelkasten префикс]]. Однако, `{{date}}` и `{{time}}` пока не работают.
