--- a/Продвинутое использование/Ранние сборки.md
+++ b/Продвинутое использование/Ранние сборки.md
@@ -1,13 +1,13 @@
-Ранние сборки это экспирементальные версии приложения Obsidian, которые раздаются держателям лицензии Catalyst на базе подписки.
+Ранние (инсайдерские) сборки – это экспирементальные версии приложения Obsidian, которые раздаются держателям лицензии Catalyst на добровольной основе.
 
-Пожалуйста, обратите внимание, что ранние сборки менее стабильны, чем публичные версии, поэтому, если вы предпочитаете беспроблемную работу, вам не нужно их включать.
+Пожалуйста, обратите внимание, что ранние сборки менее стабильны, чем общедоступные версии, поэтому, если вы предпочитаете беспроблемную версию, вам не нужно их включать.
 
 ### Как включить ранние сборки
 
-Если у вас есть [[Лицензия Catalyst|лицензия Catalyst]], у вас есть доступ к ранним сборкам до момента их публикации. Чтобы получть доступ к этим сборкам перейдите в Настройки =>  Учетная запись и введите пароль, используемый на сайте Obsidian. Затем перейдите в Настройки => О программе и включите пункт Получать ранние сборки.
+Если у вас есть [[Лицензия Catalyst|лицензия Catalyst]], у вас есть доступ к ранним сборкам до момента их публикации. Чтобы получть доступ к этим сборкам перейдите в Настройки =>  Учетная запись и введите пароль, используемый на сайте Obsidian. Затем перейдите в Настройки => О программе и включите опцию «Получать ранние сборки».
 
 ![[Insider.png]]
 
 ### Как сообщить о проблеме
 
-Если вы используете наш Discord сервер, то вы можете сообщить о проблеме в канале #insider-build. Если вы сообщаете о проблеме на форум, не забудьте указать версию сборки, которую вы используете, чтобы мы могли внести испровления перед выпуском публичной версии.
+Если вы участник нашего Discord сервера, вы можете перейти на канал #insider-build, чтобы сообщить о проблемах. Если вы отправляете отчет об ошибке на форуме, не забудьте указать версию, которую вы используете, чтобы мы могли улучшить ее, перед выпуском общедоступной версии.
