--- a/Продвинутое использование/Сторонние плагины.md
+++ b/Продвинутое использование/Сторонние плагины.md
@@ -1,41 +1,41 @@
-Obsidian allows developers to write third-party plugins to extend Obsidian's functionality.
+Obsidian позволяет разработчикам писать сторонние плагины для расширения функциональности Obsidian. 
 
-Right now, the plugin API is in alpha status. This means any part of the API could introduce breaking changes in a future release.
+Сейчас API плагина находится в альфа-статусе. Это означает, что любая часть API может внести критические изменения в будущую версию.
 
-### For developers
+### Для разработчиков
 
-For instructions on creating new plugins, see [our sample plugin](https://github.com/obsidianmd/obsidian-sample-plugin).
+Инструкции по созданию новых подключаемых модулей можно посмотреть в описании [нашего тестового плагина](https://github.com/obsidianmd/obsidian-sample-plugin).
 
-For documentation on the API, check out [our plugin API repo](https://github.com/obsidianmd/obsidian-api).
+Документацию по API можно найти в [репозитории API нашего плагина](https://github.com/obsidianmd/obsidian-api).
 
-After you created your plugin, you can add it to our community plugin marketplace by creating a pull request in [our releases repo](https://github.com/obsidianmd/obsidian-releases). Refer to the sample plugin on how to release updates for your plugin.
+Создав плагин, вы можете добавить его в наш перечень плагинов сообщества, создав pull request в [репозиторий наших релизов](https://github.com/obsidianmd/obsidian-releases). Обратитесь к образцу подключаемого модуля, чтобы узнать, как выпускать обновления для своего подключаемого модуля.
 
-### For users
+### Для пользователей 
 
-#### Safe Mode
+#### Безопасный режим
 
-By default, Obsidian has Safe Mode turned on to protect you from potential harm. Under Safe Mode, no third-party plugin will run.
+По умолчанию в Obsidian включен безопасный режим, чтобы защитить вас от потенциального вреда. В безопасном режиме сторонние плагины работать не будут.
 
-Please be aware that third-party plugins can access files on your computer, connect the internet, and even install additional programs. To read more about plugin security, [[Сторонние плагины#Plugin security|see here]].
+Помните, что сторонние плагины могут получать доступ к файлам на вашем компьютере, подключаться к Интернету и даже устанавливать дополнительные программы. Чтобы узнать больше о безопасности плагинов, см. [[Сторонние плагины#Безопасность плагинов|соответствующий раздел]]. 
 
-In order to install third-party plugins, you need to turn off Safe Mode in Settings -> Third-party plugin -> Safe Mode.
+Чтобы установить сторонние плагины, вам необходимо отключить безопасный режим в разделе Настройки -> Сторонние плагины -> Безопасный режим.
 
-#### Discover and install community plugins
+#### Поиск и установка плагинов сообщества
 
-After disabling Safe Mode, you can find third-party plugins created by the community in Settings -> Third-party plugin -> Community plugins -> Browse.
+После отключения безопасного режима вы можете найти сторонние плагины, созданные сообществом, в разделе Настройки -> Сторонние плагины -> Плагины сообщества -> Обзор. 
 
-On this page, you can browse plugins by popularity, or search for specific plugins. Click on a plugin to see details and instruction from the plugin author. In the details page, you can click "Install" to install a plugin.
+На этой странице вы можете просматривать плагины по популярности или искать определенные плагины. Кликните по названию плагина, чтобы просмотреть подробные сведения и инструкции от автора плагина. На странице с описанием плагина вы можете нажать кнопку «Установить», чтобы установить плагин. 
 
-After installing, you can then find the installed plugins under Settings -> Third-party plugin. They need to be enabled in order to take effect. You can also uninstall them there.
+После установки вы можете найти установленные плагины в разделе Настройки -> Сторонние плагины. Добавленные плагины необходимо включить, чтобы они начали работать. Вы также можете удалить их там.
 
-### Plugin security
+### Безопасность плагинов
 
-Thanks for trusting Obsidian with your data! It means a lot to us, and we take security very seriously. That includes third-party plugins too.
+Спасибо, что доверили Obsidian свои данные! Это очень много значит для нас, и мы очень серьезно относимся к безопасности. Это также включает сторонние плагины. 
 
-Due to technical reasons with our platform, we're unable to restrict plugins to a specific permission or access level. Since we offer Obsidian for free, currently we're unable to manually review each plugin.
+По техническим причинам, связанным с нашей платформой, мы не можем ограничить плагины определенным разрешением или уровнем доступа. Поскольку мы предлагаем Obsidian бесплатно, в настоящее время мы не можем проверять каждый плагин вручную. 
 
-The good news is that Obsidian has an amazing and passionate community, so we rely on community trust to ensure security of third-party plugins.
+Хорошей новостью является то, что у Obsidian потрясающее и страстное сообщество, поэтому мы полагаемся на доверие сообщества для обеспечения безопасности сторонних плагинов. 
 
-In general, you should be able to trust most of the popular plugins from the community. We require all community third-party plugins to be open sourced on GitHub. **If you're working with sensitive data, we recommend you to inspect the plugin code before installing it, so that your security needs are met.** You can find a link to the plugin repository on the plugin detail page.
+В целом, вы можете доверять большинству популярных плагинов сообщества. Мы требуем, чтобы все сторонние плагины сообщества были доступны на GitHub с открытым исходным кодом. **Если вы работаете с конфиденциальными данными, мы рекомендуем вам проверить код плагина перед его установкой, чтобы удостовериться, что плагин удовлетворяет вашим требованиям к безопасности.** Вы можете найти ссылку на репозиторий плагина на странице сведений о плагине. 
 
-If you find any security flaws with third-party plugins, contact the plugin author by adding an issue on GitHub. If you believe the plugin is malicious, contact us to get the plugin investigated and removed.
+Если вы обнаружите какие-либо недостатки безопасности в сторонних плагинах, свяжитесь с автором плагина, добавив проблему на GitHub. Если вы считаете, что плагин вредоносный, свяжитесь с нами, чтобы мы проверили его и удалили.
