--- a/Руководства/Внутренняя ссылка.md
+++ b/Руководства/Внутренняя ссылка.md
@@ -8,7 +8,7 @@
 
 Вы можете сослаться на определенный заголовок внутри заметки. Начните вводить внутреннюю ссылку на заметку, как обычно. Когда нужная заметка будет выбрана из списка, нажмите `#` вместо `Enter` и вы увидите список заголовков этой заметки. Наберите название заголовка или перемещайтесь стрелками между ними. Нажимайте `#` для включения подзаголовков, если это необходимо. Для вставки ссылки нажмите `Enter`.
 
-Для того чтобы в ссылке отображался текст, отличный от имени заметки на которую она ссылается в режиме Просмотра, используйте вертикальную черту `|`. Например, `[[Имя заметки|Отображаемое имя заметки]]`. Аналогичным образом можно изменить текст [[Сворачивание списков и заголовков#By way of example|ссылки на заголовок]].
+Для того чтобы в ссылке отображался текст, отличный от имени заметки на которую она ссылается в режиме Просмотра, используйте вертикальную черту `|`. Например, `[[Имя заметки|Отображаемое имя заметки]]`. Аналогичным образом можно изменить текст [[Сворачивание заголовков и списков#Для примера|ссылки на заголовок]].
 
 ### Переход по ссылкам
 
