--- a/Руководства/Работа с обратными ссылками.md
+++ b/Руководства/Работа с обратными ссылками.md
@@ -4,10 +4,10 @@
 
 ![[Backlinks.png]]
 
-As you can see, from this document, there is currently one entry in each section. Under Linked mentions you can see that I made a link to this document in the [[Связанная область]] note. But, you can also see under Unlinked mentions that I wrote the name of this note but did not make it a link.
+Как вы можете видить, в этом документе в настоящее время в каждом разделе есть по одной записи. В разделе Связанных упоминаний вы можете видеть, что я создал ссылку на этот документ в заметке [[Связанная область]]. Однако в разделе «Упоминания без ссылки» вы также можете видеть, что я написал название этой заметки, но не сделал её ссылкой. %%#2do%% 
 
-This can be a very powerful way of seeing connections between your notes that you did not know you were making when you wrote them. If, for example, you have a note named for a concept that comes up often in your field, you will be able to see easily when it is mentioned in other notes, and thus understand relationships between ideas you might not have otherwise.
+Это может быть очень эффективным способом нахождения связей между вашими заметками, о которых вы не знали, когда писали их. Например, если вы назвали одну заметку определённым концептом, который часто встречается в вашей области, вы сможете леко понять, когда этот концепт упоминается в других заметках, и, таким образом, вы сможете найти новые взаимосвязи между вашими идеями, которых не было видно до этого.
 
-If a reference appears in the Unlinked mentions, and you want to link it, hovering over the text will bring up a Link button. Clicking this will automatically surround the highlighted text in the referenced note with brackets, making it into an explicit link.
+Если ссылка появляется в «Упоминаниях без ссылки», и вы хотите связать её, при наведении курсора на текст появится специальная кнопка для выполенения этой операции. Нажатие этой кнопки автоматически добавит выделенный текст в скобки, создав прямую ссылку.
 
-You can also create a separate, dedicated backlinks pane for a note under the More Options menu. This will be a [[Связанная область]] connected to the note, and can be moved around anywhere, as described in [[Расположение области]]. There's also an option to do this in the [[Палитра команд]].
+Вы также можете создать отдельную область с обратными ссылоками через меню дополнительных настроек «Еще». Это  будет [[Связанная область|связанная область]] соединённая с заметкой, и как описано в [[Расположение области]],  эту область можно передвигать куда угодно. Эту функцию можно также реализовать в [[Палитра команд|палитре команд]].
